--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python = ">=3.8,<4.0"
 click = "^8.1.3"  # For CLI interface
 pydantic = "^2.0.0"  # For data validation
 loguru = "^0.7.0"  # For logging
+requests = "^2.25.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.3.1"
