--- a/pytest.ini
+++ b/pytest.ini
@@ -1,9 +1,11 @@
-[pytest]
+[tool:pytest]
+minversion = 6.0
+addopts = -ra -q --strict-markers --strict-config
 testpaths = tests
-python_files = test_*.py
+python_files = test_*.py *_test.py
 python_classes = Test*
 python_functions = test_*
-addopts = -v
 markers =
-    unit: mark a test as a unit test
-    integration: mark a test as an integration test 
+    unit: Unit tests
+    integration: Integration tests
+    slow: Slow running tests 
