--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,16 +11,22 @@ readme = "README.md"
 packages = [{include = "toolcrate", from = "src"}]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<4.0"
+python = ">=3.9,<4.0"
 click = "^8.1.3"  # For CLI interface
 pydantic = "^2.0.0"  # For data validation
 loguru = "^0.7.0"  # For logging
+pyyaml = "^6.0"  # For YAML configuration files
 
-[tool.poetry.dev-dependencies]
-pytest = "^7.3.1"
-black = "^23.3.0"
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.0.0"
+pytest-asyncio = "^0.23.0"
+pytest-cov = "^4.1.0"
+coverage = "^7.0.0"
+black = "^24.0.0"
 isort = "^5.12.0"
-mypy = "^1.3.0"
+mypy = "^1.8.0"
+ruff = "^0.1.0"  # Fast linter/formatter
+pre-commit = "^3.6.0"  # Git hooks
 
 [tool.poetry.scripts]
 toolcrate = "toolcrate.cli.main:main"
@@ -28,9 +34,147 @@ slsk-tool = "toolcrate.cli.wrappers:run_slsk"
 shazam-tool = "toolcrate.cli.wrappers:run_shazam"
 mdl-tool = "toolcrate.cli.wrappers:run_mdl"
 
+# Testing configuration
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = [
+    "-ra",
+    "--strict-markers",
+    "--strict-config",
+    "--cov=src/toolcrate",
+    "--cov-report=term-missing",
+    "--cov-report=html",
+    "--cov-report=xml",
+]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+markers = [
+    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+    "integration: marks tests as integration tests",
+    "unit: marks tests as unit tests",
+]
+
+# Coverage configuration
+[tool.coverage.run]
+source = ["src"]
+omit = [
+    "*/tests/*",
+    "*/test_*",
+    "*/__pycache__/*",
+    "*/venv/*",
+    "*/.venv/*",
+]
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    "def __repr__",
+    "if self.debug:",
+    "if settings.DEBUG",
+    "raise AssertionError",
+    "raise NotImplementedError",
+    "if 0:",
+    "if __name__ == .__main__.:",
+    "class .*\\bProtocol\\):",
+    "@(abc\\.)?abstractmethod",
+]
+
+# Code formatting
 [tool.black]
 line-length = 88
+target-version = ["py39", "py310", "py311", "py312"]
+include = '\.pyi?$'
+extend-exclude = '''
+/(
+  # directories
+  \.eggs
+  | \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | build
+  | dist
+  | src/slsk-batchdl
+  | src/Shazam-Tool
+)/
+'''
 
 [tool.isort]
 profile = "black"
-line_length = 88 
+line_length = 88
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
+skip_glob = ["src/slsk-batchdl/*", "src/Shazam-Tool/*"]
+
+# Type checking
+[tool.mypy]
+python_version = "3.9"
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+check_untyped_defs = true
+disallow_untyped_decorators = true
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_no_return = true
+warn_unreachable = true
+strict_equality = true
+exclude = [
+    "src/slsk-batchdl/",
+    "src/Shazam-Tool/",
+    "build/",
+    "dist/",
+]
+
+# Linting with Ruff
+[tool.ruff]
+target-version = "py39"
+line-length = 88
+select = [
+    "E",  # pycodestyle errors
+    "W",  # pycodestyle warnings
+    "F",  # pyflakes
+    "I",  # isort
+    "B",  # flake8-bugbear
+    "C4", # flake8-comprehensions
+    "UP", # pyupgrade
+]
+ignore = [
+    "E501",  # line too long, handled by black
+    "B008",  # do not perform function calls in argument defaults
+    "C901",  # too complex
+]
+exclude = [
+    ".bzr",
+    ".direnv",
+    ".eggs",
+    ".git",
+    ".hg",
+    ".mypy_cache",
+    ".nox",
+    ".pants.d",
+    ".ruff_cache",
+    ".svn",
+    ".tox",
+    ".venv",
+    "__pypackages__",
+    "_build",
+    "buck-out",
+    "build",
+    "dist",
+    "node_modules",
+    "venv",
+    "src/slsk-batchdl",
+    "src/Shazam-Tool",
+]
+
+[tool.ruff.per-file-ignores]
+"tests/*" = ["S101"]  # Allow assert statements in tests
