Fix Docker config directory issue
- Create empty config directory in Dockerfile instead of copying local config
- Exclude entire config/ directory in .dockerignore for security
- This prevents sensitive local config files from being included in production image
- Resolves GitHub Actions build error about missing config directory

--- a/.dockerignore
+++ b/.dockerignore
@@ -80,14 +80,8 @@ data/downloads/
 data/library/
 downloads/
 
-# Config files with sensitive data
-config/*.conf
-config/.env
-config/crontabs/
-config/toolcrate.yaml
-config/wishlist.txt
-config/download-queue.txt
-config/data/
+# Config files with sensitive data - exclude entire config directory
+config/
 
 # Documentation (needed for test builds)
 # docs/ - commented out to allow test builds
