--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ isort = "^5.12.0"
 mypy = "^1.8.0"
 ruff = "^0.1.0"  # Fast linter/formatter
 pre-commit = "^3.6.0"  # Git hooks
+setuptools = "^80.9.0"
 
 [tool.poetry.scripts]
 toolcrate = "toolcrate.cli.main:main"
