--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -35,6 +35,8 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+      with:
+        submodules: recursive
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
@@ -74,7 +76,17 @@ jobs:
     - name: Test the built image
       run: |
         echo "Testing the built Docker image..."
-        docker run --rm ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }} \
+        echo "Available tags: ${{ steps.meta.outputs.tags }}"
+
+        # Extract the first tag from the metadata output for testing
+        FIRST_TAG=$(echo "${{ steps.meta.outputs.tags }}" | head -n1)
+        echo "Testing with tag: $FIRST_TAG"
+
+        # Pull the image for the current platform (linux/amd64)
+        docker pull --platform linux/amd64 "$FIRST_TAG"
+
+        # Test the image
+        docker run --rm --platform linux/amd64 "$FIRST_TAG" \
           bash -c "toolcrate --version && python -c 'import toolcrate; print(\"ToolCrate imported successfully\")'"
 
   update-docker-compose:
@@ -87,6 +99,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
+        submodules: recursive
 
     - name: Update docker-compose.yml to use registry image
       run: |
