--- a/.github/workflows/test-docker.yml
+++ b/.github/workflows/test-docker.yml
@@ -25,6 +25,8 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+      with:
+        submodules: recursive
 
     - name: Log in to Container Registry
       uses: docker/login-action@v3
@@ -70,6 +72,8 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+      with:
+        submodules: recursive
 
     - name: Log in to Container Registry
       uses: docker/login-action@v3
