--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,15 @@ pydantic = "^2.0.0"  # For data validation
 loguru = "^0.7.0"  # For logging
 pyyaml = "^6.0"  # For YAML configuration files
 
+# Optional dependencies for Shazam tool
+pydub = {version = "^0.25.1", optional = true}
+shazamio = {version = "^0.4.0", optional = true}
+yt-dlp = {version = "^2023.12.30", optional = true}
+
+# Optional dependencies for slsk-batchdl tool
+docker = {version = "^7.0.0", optional = true}
+docker-compose = {version = "^1.29.0", optional = true}
+
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
 pytest-asyncio = "^0.23.0"
@@ -55,6 +64,11 @@ mypy = "^1.8.0"
 ruff = "^0.1.0"  # Fast linter/formatter
 pre-commit = "^3.6.0"  # Git hooks
 setuptools = "^80.9.0"
+
+[tool.poetry.extras]
+shazam = ["pydub", "shazamio", "yt-dlp"]
+slsk = ["docker", "docker-compose"]
+all = ["pydub", "shazamio", "yt-dlp", "docker", "docker-compose"]
 
 [tool.poetry.scripts]
 toolcrate = "toolcrate.cli.main:main"
@@ -84,6 +98,7 @@ markers = [
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
     "integration: marks tests as integration tests",
     "unit: marks tests as unit tests",
+    "asyncio: marks tests as async tests",
 ]
 
 # Coverage configuration
