--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,9 +40,9 @@ include = [
 [tool.poetry.dependencies]
 python = ">=3.9,<4.0"
 click = "^8.1.3"  # For CLI interface
-pydantic = "^2.0.0"  # For data validation
+pydantic = ">=1.10.2,<3.0.0"  # For data validation (compatible with shazamio)
 loguru = "^0.7.0"  # For logging
-pyyaml = "^6.0"  # For YAML configuration files
+pyyaml = ">=3.10,<6.0"  # For YAML configuration files (compatible with docker-compose)
 
 # Optional dependencies for Shazam tool
 pydub = {version = "^0.25.1", optional = true}
@@ -54,8 +54,8 @@ docker = {version = "^7.0.0", optional = true}
 docker-compose = {version = "^1.29.0", optional = true}
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^8.0.0"
-pytest-asyncio = "^0.23.0"
+pytest = ">=7.2.0,<9.0.0"
+pytest-asyncio = ">=0.20.3,<0.24.0"
 pytest-cov = "^4.1.0"
 coverage = "^7.0.0"
 black = "^24.0.0"
