--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ classifiers = [
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
 
+    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Topic :: Multimedia :: Sound/Audio",
@@ -36,7 +37,7 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.11,<3.13"
+python = ">=3.10,<3.13"
 click = "^8.1.3"  # For CLI interface
 pydantic = "^2.0.0"  # For data validation
 loguru = "^0.7.0"  # For logging
@@ -118,7 +119,7 @@ exclude_lines = [
 # Code formatting
 [tool.black]
 line-length = 88
-target-version = ["py311", "py312"]
+target-version = ["py310", "py311", "py312"]
 include = '\.pyi?$'
 extend-exclude = '''
 /(
@@ -148,7 +149,7 @@ skip_glob = ["src/slsk-batchdl/*", "src/Shazam-Tool/*"]
 
 # Type checking
 [tool.mypy]
-python_version = "3.11"
+python_version = "3.10"
 warn_return_any = true
 warn_unused_configs = true
 # Temporarily relaxed while adding type annotations
@@ -173,22 +174,8 @@ exclude = [
 
 # Linting with Ruff
 [tool.ruff]
-target-version = "py311"
+target-version = "py310"
 line-length = 88
-select = [
-    "E",  # pycodestyle errors
-    "W",  # pycodestyle warnings
-    "F",  # pyflakes
-    "I",  # isort
-    "B",  # flake8-bugbear
-    "C4", # flake8-comprehensions
-    "UP", # pyupgrade
-]
-ignore = [
-    "E501",  # line too long, handled by black
-    "B008",  # do not perform function calls in argument defaults
-    "C901",  # too complex
-]
 exclude = [
     ".bzr",
     ".direnv",
@@ -213,5 +200,22 @@ exclude = [
     "src/Shazam-Tool",
 ]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint]
+select = [
+    "E",  # pycodestyle errors
+    "W",  # pycodestyle warnings
+    "F",  # pyflakes
+    "I",  # isort
+    "B",  # flake8-bugbear
+    "C4", # flake8-comprehensions
+    "UP", # pyupgrade
+]
+ignore = [
+    "E501",  # line too long, handled by black
+    "B008",  # do not perform function calls in argument defaults
+    "B904",  # raise ... from err - we'll ignore this for CLI code
+    "C901",  # too complex
+]
+
+[tool.ruff.lint.per-file-ignores]
 "tests/*" = ["S101"]  # Allow assert statements in tests
