--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,6 @@
 # Docker Compose configuration for ToolCrate production deployment
 # Self-contained deployment without local filesystem dependencies
 
-version: '3.8'
-
 services:
   toolcrate:
     build:
@@ -22,14 +20,12 @@ services:
       - toolcrate-data:/app/data
       - toolcrate-logs:/app/logs
       - toolcrate-config:/app/config
+      # Docker-in-Docker support for slsk-batchdl containers
+      - /var/run/docker.sock:/var/run/docker.sock
     # Keep container running with a long-running command
     command: ["tail", "-f", "/dev/null"]
-    
-    # Optional: if you need Docker access for slsk-batchdl containers
-    # Uncomment the following lines:
-    # volumes:
-    #   - /var/run/docker.sock:/var/run/docker.sock
-    # user: "1000:$(stat -c %g /var/run/docker.sock)"
+    # Enable Docker access with root permissions (required for macOS Docker Desktop)
+    # user: "501:20"
 
 networks:
   toolcrate-network:
